25 de mayo de 2024 (FruteriaFX made by cr0nox._)

--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,11 @@
             <artifactId>materialfx</artifactId>
             <version>11.13.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.kordamp.bootstrapfx</groupId>
+            <artifactId>bootstrapfx-core</artifactId>
+            <version>0.4.0</version>
+        </dependency>
     </dependencies>
 
 
